hooks/t/egress-forbidden-entity.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: "egress-with-forbidden-entity"
spec:
  endpointSelector: {}
  egress:
  - toEntities:
    - host
    - remote-node
