hooks/t/ingress-forbidden-cidrset.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: "ingress-with-forbidden-cidrset"
spec:
  endpointSelector: {}
  ingress:
  - fromCIDRSet:
    - cidr: 10.76.16.0/20
    - cidr: 10.86.16.0/20
    - cidr: 10.96.16.0/20
