hooks/t/ingress-forbidden-entity.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: "ingress-with-forbidden-entity"
spec:
  endpointSelector: {}
  ingress:
  - fromEntities:
    - world
