hooks/t/multiple-cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: "multiple-policies"
specs:
  - endpointSelector: {}
    egress:
    - toCIDRSet:
      - cidr: 10.72.16.0/20
      - cidr: 10.82.16.0/20
      - cidr: 10.92.16.0/20
